# Red-Social-

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: mi_red.json  sample_edges.csv  users.csv
include/: LoginDialog.h  RegisterDialog.h  TimelineWidget.h  avl_tree.h  graph.h  hash_table.h  linked_list.h  node.h  suggester.h  user.h
src/: LoginDialog.cpp  RegisterDialog.cpp  TimelineWidget.cpp  avl_tree.cpp  graph.cpp  hash_table.cpp  linked_list.cpp  main_qt.cpp  node.cpp  suggester.cpp
tests/: test_graph.cpp  test_hash.cpp
